<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id">1551177391819151</string>
    <string name="google_api_key">AIzaSyBkodxzhGS6KRU9UXLQEOXgQLAipiqm0aU</string>
    <string name="app_name">ShareRoom</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="internet_not_connected">Không có kết nối mạng</string>
    <string name="require_login">Cần Đăng Nhập Để Sử Dụng Chức Năng Này</string>
    <string name="waiting">Xin Vui Lòng Đợi Trong Giây Lát</string>
    <string name="invalidNumber">Chuỗi Nhập Vào Không Phải Là Số</string>
    <string name="shareroom">Đăng Tin Phòng Trọ Và Ở Ghép</string>
    <string name="account">Tài Khoản</string>
    <string name="login">Đăng Nhập</string>
    <string name="logout">Đăng Xuất</string>
    <string name="application">Ứng Dụng</string>
    <string name="posted">Bài Đã Đăng</string>
    <string name="favorite">Mục Ưa Thích</string>
    <string name="messages">Tin Nhắn</string>
    <string name="about">Giới Thiệu</string>
    <string name="setting">Cài Đặt</string>
    <string name="full_app_name">Ứng Dụng Đăng Tin Phòng Trọ Và Ở Ghép</string>
    <string name="about_dialog">- Hướng Dẫn : TS Trần Việt Trung\n- Thực Hiện : Nguyễn Tiến Mạnh\n- MSSV : 20101867\n- Khóa : K55</string>
    <string name="OK">OK</string>
    <string name="btn_post_your_room">ĐĂNG TIN PHÒNG TRỌ</string>
    <string name="btn_search_rooms">TÌM KIẾM PHÒNG TRỌ</string>
    <string name="district">Quận/Huyện</string>
    <string name="ward">Phường/Xã</string>
    <string name="choice_city">Chọn Địa Điểm</string>
    <string name="choose">Chọn</string>
    <string name="back">Quay Lại</string>
    <string name="initDB" tools:ignore="TypographyEllipsis">Đang Chạy Dữ Liệu Cho Lần Đầu Tiên Sử Dụng...</string>
    <string name="question_logout">Bạn Có Muốn Đăng Xuất Tài Khoản Hay Không ?</string>
    <string name="animation">Hiệu Ứng</string>
    <string name="turn_on_anim">Bật Hiệu Ứng</string>
    <string name="turn_off_anim">Tắt Hiệu Ứng</string>
    <string name="animation_scale">Tỉ Lệ</string>
    <string name="animation_friction">Ma Sát</string>
    <string name="animation_tension">Sức Ép</string>
    <string name="font">Font Chữ</string>
    <string name="choice_font">Chọn Font Chữ</string>
    <string-array name="list_fonts">
        <item>Default</item>
        <item>ACaslonPro</item>
        <item>Argos OnGoing</item>
        <item>Beautiful Every Time</item>
        <item>Black Chancery</item>
        <item>Blueberry Muffins</item>
        <item>Call Me Maybe</item>
        <item>Chalk Hand</item>
        <item>Cider Script</item>
        <item>Cinnamon Cake</item>
        <item>Crayon</item>
        <item>Dartangnon</item>
        <item>Didot</item>
        <item>Geotica</item>
        <item>HeraBig</item>
        <item>Kaileen</item>
        <item>Lavanderia</item>
        <item>Love Passion</item>
        <item>Love Ya Like A Sister</item>
        <item>Loving You</item>
        <item>Net Muc</item>
        <item>Ong Do</item>
        <item>Pepita</item>
        <item>Riesling</item>
        <item>Rix Love Fool</item>
        <item>Souci</item>
        <item>Time New Roman</item>
        <item>U Make Me Smile</item>
        <item>UTM Akashi</item>
        <item>UTM Alba Matter</item>
        <item>UTM Amerika Sans</item>
        <item>UTM DuePunToZero</item>
        <item>Valentine</item>
        <item>ZemkeHand OnGoing</item>
    </string-array>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật Khẩu</string>
    <string name="cb_save_account">Ghi nhớ tài khoản</string>
    <string name="login_with_facebook">Đăng Nhập Bằng FaceBook</string>
    <string name="register">Đăng Kí Tài Khoản</string>
    <string name="missing_input">Nhập Thiếu</string>
    <string name="and">Và</string>
    <string name="male">Nam</string>
<string name="male_eng">male</string>
    <string name="female">Nữ</string>
<string name="female_eng">female</string>
    <string name="hint_confirmPass">Xác Nhận Mật Khẩu</string>
    <string name="hint_first_name">Họ</string>
    <string name="hint_last_name">Tên</string>
    <string name="information">Thông Tin Cá Nhân</string>
    <string name="password_not_equal_confirmPass">Xác Nhận Mật Khẩu Không Giống Mật Khẩu</string>
    <string name="profile_title">Thông Tin Tài Khoản</string>
    <string name="update_account">Update Tài Khoản</string>
    <string name="age">Tuổi</string>
<string name="edit_age">Sửa Tuổi</string>
<string name="hint_age">Nhập Số Tuổi</string>
    <string name="gender">Giới Tính</string>
<string name="choice_gender">Sửa Giới Tính</string>
    <string-array name="array_gender">
        <item >Nam</item>
        <item >Nữ</item>
    </string-array>
    <string name="address">Địa Chỉ</string>
<string name="edit_address">Sửa Địa Chỉ</string>
<string name="hint_my_address">Nhập Địa Chỉ</string>
<string name="getCurrentLocation">Lấy Vị Trí Hiện Tại</string>
    <string name="birthday">Sinh Nhật</string>
    <string name="description">Giới Thiệu Bản Thân</string>
<string name="edit_description">Sửa Giới Thiệu Bản Thân</string>
<string name="hint_description">Nhập Giới Thiệu Bản Thân</string>
    <string name="occupation">Nghề Nghiệp</string>
<string name="edit_occupation">Sửa Nghề Nghiệp</string>
<string name="hint_occupation">Nhập Nghề Nghiệp</string>
    <string name="phonenumber">Số Điện Thoại</string>
<string name="edit_phonenumber">Sửa Số Điện Thoại</string>
<string name="hint_phonenumber">Nhập Số Điện Thoại</string>
    <string name="no_content">Chưa Có Thông Tin</string>
    <string name="hint_old_password">Mật Khẩu Cũ</string>
<string name="edit_password">Sửa Mật Khẩu</string>
<string name="invalid_old_password">Nhập Mật Khẩu Cũ Không Đúng</string>
    <string name="hint_new_password">Mật Khẩu Mới</string>
    <string name="hint_confirm_new_password">Xác Nhận Mật Khẩu Mới</string>
    <string name="cannot_getCurLocation">Không thể lấy được vị trí hiện tại. Hãy bật dịch vụ GPS để xác định vị trí</string>
    <string name="edit_avatar">Sửa Ảnh Đại Diện</string>
    <string-array name="list_edit_image">
        <item >Chụp Ảnh</item>
        <item >Chọn Ảnh Từ Thư Viện</item>
        <item >Quay Lại</item>
    </string-array>
    <string name="edit_name">Sửa Họ Tên</string>
    <string name="room_address_title">Vị Trí Phòng Trọ</string>
    <string name="hint_address">Địa Chỉ Phòng Trọ</string>
    <string name="btn_search">TÌM KIẾM</string>
    <string name="move_market">Di Chuyển Cờ Tới Vị Trí Mong Muốn</string>
    <string name="missing_address_and_marker">Thiếu Địa Chỉ Và Cờ Vị Trí Phòng Trọ</string>
    <string name="missing_address">Thiếu Địa Chỉ Phòng Trọ</string>
    <string name="missing_marker">Thiếu Cờ Vị Trí Phòng Trọ</string>
    <string name="room_properties_title">Thông Tin Chung Phòng Trọ</string>
    <string name="txt_rent_per_month">Tiền Trọ/Tháng</string>
    <string name="txt_electric">Tiền Điện/Số</string>
    <string name="txt_water">Tiền Nước/Tháng</string>
    <string name="txt_area">Diện Tích Phòng</string>
    <string name="txt_number_per_room">Số Người/Phòng</string>
    <string name="txt_min_stay">Ở Tối Thiểu</string>
    <string name="txt_available_from">Ở Được Từ</string>
    <string name="txt_room_type">Kiểu Phòng Trọ</string>
    <string name="txt_room_state">Kiểu Bài Đăng</string>
    <string name="vnd">VNĐ</string>
    <string name="million_vnd">Triệu VNĐ</string>
    <string name="million">Triệu</string>
    <string name="month">Tháng</string>
    <string name="person">Người</string>
    <string name="txt_rent_per_month_content">0.0 Triệu VNĐ</string>
    <string name="txt_electric_and_water_content">0.000 VNĐ</string>
    <string name="txt_number_per_room_content">0 Người</string>
    <string name="txt_min_stay_content">0 Tháng</string>
    <string name="choice_room_type">Chọn Kiểu Phòng Trọ</string>
    <string-array name="array_room_type">
        <item >Nhà Cấp 4</item>
        <item >Nhà Tầng</item>
        <item >Chung Cư</item>
        <item >Liên Hệ</item>
    </string-array>
    <string name="choice_room_state">Chọn Kiểu Bài Đăng</string>
    <string-array name="array_room_state">
        <item >Cho Thuê</item>
        <item >Tìm Người Ở Ghép</item>
        <item >Liên Hệ</item>
    </string-array>
    <string name="room_images_title">Hình Ảnh Phòng Trọ</string>
    <string name="add_image">Thêm Ảnh Phòng Trọ</string>
    <string name="add_note">Thêm Ghi Chú Ảnh</string>
    <string name="add_note_hint">Nhập Ghi Chú</string>
    <string name="question_remove_image">Bạn Có Muốn Xóa Bức Ảnh Này Hay Không ?</string>
    <string name="upload_success">UpLoad Thành Công</string>
    <string name="delete_success">Xóa Thành Công</string>
    <string name="image">Ảnh</string>
    <string name="room_amenities_title">Tiện Ích Phòng Trọ</string>
    <string name="btn_post">ĐĂNG BÀI</string>
    <string name="hint_amenitites">Nhập Tiện Ích</string>
    <string-array name="array_amenities">
        <item>Gần chợ, siêu thị</item><item>gancho</item>
        <item>Gần công viên</item><item>ganCongVien</item>
        <item>Nhà mặt đường</item><item>matDuong</item>
        <item>Có sẵn giường ngủ</item><item>phongNgu</item>
        <item>Có ban công thoáng mát</item><item>banCong</item>
        <item>Có sẵn tủ đựng quần áo</item><item>tuQuanAo</item>
        <item>Có điều hòa, máy lạnh</item><item>dieuHoa</item>
        <item>Có sân phơi quần áo riêng</item><item>sanPhoiQuanAo</item>
        <item>Phòng mới xây</item><item>phongMoiXay</item>
        <item>Có lối đi riêng</item><item>loiDiRieng</item>
        <item>Có chỗ để xe riêng</item><item>choDeXeRieng</item>
        <item>Có cáp truyền hình</item><item>capTruyenHinh</item>
        <item>Có Internet</item><item>internet</item>
        <item>Có sẵn tivi</item><item>tivi</item>
        <item>Giờ giấc tự do</item><item>gioGiacTuDo</item>
        <item>Cần đặt cọc</item><item>canDatCoc</item>
        <item>Yên tĩnh</item><item>yenTinh</item>
        <item>An ninh tốt</item><item>anNinh</item>
        <item>Có nới nấu ăn riêng biệt</item><item>choNauAn</item>
        <item>Có phòng tắm riêng</item><item>phongTam</item>
        <item>Ở chung chủ</item><item>oCungChuNha</item>
    </string-array>
    <string name="my_room_title">Danh Sách Bài Đăng</string>
    <string name="no_rooms">Chưa Có Bài Đăng. Đăng Bài Ngay ?</string>
    <string name="room_detail_title">Chi Tiết Bài Đăng</string>
    <string name="province">Thành Phố/Tỉnh</string>
    <string name="no_room_image">Không Có Ảnh Phòng Trọ</string>
    <string name="question_delete_room">Bạn Có Muốn Xóa Bài Đăng Này Hay Không ?</string>
    <string name="question_edit_room_images">Bạn Có Muốn Sửa Hình Ảnh Phòng Trọ Hay Không ?</string>
    <string name="question_edit_room_properties">Bạn Có Muốn Sửa Thông Tin Chung Phòng Trọ Hay Không ?</string>
    <string name="question_edit_room_address">Bạn Có Muốn Sửa Vị Trí Phòng Trọ Hay Không ?</string>
    <string name="txt_rent_dialog">Tiền Trọ</string>
<string name="txt_rent_min">0.0 Triệu</string>
<string name="txt_rent_max">10.0 Triệu</string>
    <string name="txt_electric_dialog">Tiền Điện</string>
<string name="txt_electric_min">0.000</string>
<string name="txt_electric_max">10.000</string>
    <string name="txt_water_dialog">Tiền Nước</string>
<string name="txt_water_min">0.000</string>
<string name="txt_water_max">100.000</string>
    <string name="txt_area_dialog">Diện Tích</string>
    <string name="txt_person_dialog">Số Người</string>
<string name="txt_person_min">0 Người</string>
<string name="txt_person_max">10 Người</string>
    <string name="my_favorite_rooms_title">Danh Sách Bài Đăng Ưa Thích</string>
    <string name="no_favorite_rooms">Không Có Bài Đăng Ưa Thích</string>
</resources>