<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	tools:ignore="HardcodedText" >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<com.appyvet.rangebar.RangeBar
			android:id="@+id/slider_rent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:weightSum="10"
            android:layout_marginTop="5dp">
	        <TextView
	            android:id="@+id/txt_rent"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center_vertical"
	            android:text="@string/txt_rent_dialog"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView
	            android:id="@+id/txt_rent_min"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:text="@string/txt_rent_min"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView 
	            android:id="@+id/txt_dot_1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="-->"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	        <TextView
	            android:id="@+id/txt_rent_max"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:text="@string/txt_rent_max"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<com.appyvet.rangebar.RangeBar
			android:id="@+id/slider_electric"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:weightSum="10"
            android:layout_marginTop="5dp">
	        <TextView
	            android:id="@+id/txt_electric"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center_vertical"
	            android:text="@string/txt_electric_dialog"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView
	            android:id="@+id/txt_electric_min"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:text="@string/txt_electric_min"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView 
	            android:id="@+id/txt_dot_2"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="-->"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView
	            android:id="@+id/txt_electric_max"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:text="@string/txt_electric_max"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<com.appyvet.rangebar.RangeBar
			android:id="@+id/slider_water"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:weightSum="10"
            android:layout_marginTop="5dp">
	        <TextView
	            android:id="@+id/txt_water"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center_vertical"
	            android:text="@string/txt_water_dialog"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView
	            android:id="@+id/txt_water_min"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:text="@string/txt_water_min"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView 
	            android:id="@+id/txt_dot_3"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="-->"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView
	            android:id="@+id/txt_water_max"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:text="@string/txt_water_max"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<com.appyvet.rangebar.RangeBar
			android:id="@+id/slider_area"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:weightSum="10"
            android:layout_marginTop="5dp">
	        <TextView
	            android:id="@+id/txt_area"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center_vertical"
	            android:text="@string/txt_area_dialog"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView
	            android:id="@+id/txt_area_min"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView 
	            android:id="@+id/txt_dot_4"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="-->"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView
	            android:id="@+id/txt_area_max"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
    </FrameLayout>
     <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		 <com.appyvet.rangebar.RangeBar
			 android:id="@+id/slider_person"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:layout_gravity="center_vertical"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:weightSum="10"
            android:layout_marginTop="5dp">
	        <TextView
	            android:id="@+id/txt_person"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center_vertical"
	            android:text="@string/txt_person_dialog"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView
	            android:id="@+id/txt_person_min"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:text="@string/txt_person_min"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView 
	            android:id="@+id/txt_dot_5"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="-->"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <TextView
	            android:id="@+id/txt_person_max"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="3"
	            android:gravity="center"
	            android:text="@string/txt_person_max"
	            android:textColor="@android:color/white"
	            android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
